src/test/deca/codegen/valid/notprovided/mul_overflow.deca
{
	float x = 9999999999999999999999999999999999999.0;
	float y = 99999999999999999999999999.0;
	float z = x * y;
	print(z);
}